--- a/todo.html
+++ b/todo.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="/stylesheet.css">
 </head>
 <body>
-    <img class="addon" src="/pngwing.com.png">
+    <img class="addon" src="/stuff/pngwing.com.png">
   <div class="container">
     <h1>ToDo List</h1>
     <div class="input-container">
