--- a/todo.html
+++ b/todo.html
@@ -10,9 +10,10 @@
   <link rel="stylesheet" href="/stylesheet.css">
 </head>
 <body>
-    <img class="addon" src="/stuff/pngwing.com.png">
+    <img class="addon" src="/stuff/pngwing.png">
+ <img class="naddon" src="/stuff/name.png">
   <div class="container">
-    <h1>ToDo List</h1>
+    <h1 class="font">TODO LIST</h1>
     <div class="input-container">
       <input class="todo-input" placeholder="Add a new task...">
       <button class="add-button">
@@ -26,7 +27,7 @@
     </div>
     <div class="todos-container">
       <ul class="todos"></ul>
-<!--      <img class="empty-image" src="/Checklist.jpg">-->
+     <img class="empty-image" src="/stuff/pngwing.com.png">
     </div>
   </div>
   <script src="./script.js"></script>
